--- a/project.config.json
+++ b/project.config.json
@@ -42,7 +42,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wx241d158577949336",
+  "appid": "wx2aa8be33c03eb181",
   "projectname": "miniprogram-92",
   "condition": {},
   "editorSetting": {
