实现列表和详情页

--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "pages/homepage/homepage",
     "pages/activity/activity",
     "pages/news/news",
+    "pages/registration/registration",
     "pages/logs/logs"
   ],
   "window":{
