info#	modified:   pages/detailinfo/detailinfo.js info#	modified:   pages/detailinfo/detailinfo.json info#	modified:   pages/detailinfo/detailinfo.wxml info#	modified:   pages/detailinfo/detailinfo.wxss

--- a/project.config.json
+++ b/project.config.json
@@ -47,7 +47,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wx241d158577949336",
+  "appid": "wxebc481bd6184079f",
   "projectname": "miniprogram-92",
   "condition": {},
   "editorSetting": {
