--- a/project.config.json
+++ b/project.config.json
@@ -47,7 +47,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
-  "appid": "wx241d158577949336",
+  "appid": "wxcb12f2c8c8101ad8",
   "projectname": "miniprogram-92",
   "condition": {},
   "editorSetting": {
