--- a/project.private.config.json
+++ b/project.private.config.json
@@ -14,6 +14,13 @@
           "query": "",
           "launchMode": "default",
           "scene": null
+        },
+        {
+          "name": "",
+          "pathName": "pages/detailinfo/detailinfo",
+          "query": "",
+          "launchMode": "default",
+          "scene": null
         }
       ]
     }
