--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     "pages/registration/registration",
     "pages/detailinfo/detailinfo",
     "pages/aboutus/aboutus",
-    "pages/FAQ/FAQ"
+    "pages/FAQ/FAQ",
+    "pages/Vphoto/Vphoto"
   ],
   "window":{
     "backgroundTextStyle":"light",
